--- a/roles/consul/tasks/configure.yml
+++ b/roles/consul/tasks/configure.yml
@@ -81,7 +81,7 @@
       src: aws.json.j2
       dest: /etc/consul/aws.json
       mode: 0644
-    when: consul_use_aws
+    when: consul_use_ec2
     tags:
       - consul
 
