--- a/consul.yml
+++ b/consul.yml
@@ -1,4 +1,3 @@
-#!/usr/bin/env ansible-playbook -i inventory.ini --skip-tags=bootstrap,vault
 ---
 - hosts: all
   gather_facts: true
@@ -11,17 +10,21 @@
   tags:
     - bootstrap
 
-- name: setup the consul servers
+- name: setup the servers
   hosts: consul
   gather_facts: true
   roles:
-    - { role: consul, consul_is_server: yes, consul_dc: alpha, consul_ui_enabled: yes }
+    - { role: consul, consul_is_server: yes, consul_dc: "{{dc_name}}", consul_ui_enabled: yes, consul_dns_domain: "{{ansible_dns.domain}}" }
+    - { role: vault, vault_datacenter: "{{dc_name}}" }
+    - { role: nomad, nomad_is_server: yes, nomad_dc: "{{dc_name}}" }
   tags:
     - consul
+    - nomad
+    - vault
     - consul-servers
 
 - name: setup DNSmasq
   hosts: all
   become: yes
   roles:
-  - { role: dnsmasq, consul_dns_domain: bramble.local, consul_dc: alpha }
+  - { role: dnsmasq, consul_dns_domain: "{{ansible_dns.domain}}", consul_dc: "{{dc_name}}" }
